hphp/hack/test/typecheck/class_level_where_clauses/this_as/static_via_alias_01.bad.php.exp
File "static_via_alias_01.bad.php", line 6, characters 46-48:
No static method `bar` in `C` (Typing[4090])
  File "static_via_alias_01.bad.php", line 6, characters 19-21:
  Did you mean instance method `foo` instead?
  File "static_via_alias_01.bad.php", line 5, characters 7-7:
  Declaration of `C` is here
