hphp/hack/test/typecheck/class_level_where_clauses/this_as/static_via_alias_01.bad.php
<?hh

newtype B = C;

class C where this as B {
  public function foo(): int { return $this::bar(); }
}
